# SU

Code/BoW/: CMakeCache.txt  CMakeLists.txt  Makefile  bow_main.cpp  cmake_install.cmake
Code/Common/: Image.cpp  Image.hpp  const_defs.hpp
Code/TF/: cnn.py  tf_cnn.py  train.txt
Test/horse/original/: 108411831_c65664c943.jpg.1  Tarpan.jpg.1  tarpan.jpg.1  tarpan.jpg.2
